web/src/components/Navigation/Navigation.module.scss
@use 'src/styles/breakpoints' as bp;
@use 'src/styles/helpers' as h;

.nav {
  display: flex;
  align-items: center;

  & ul[role='menu'] {
    margin: 0;
    padding: 0;
    list-style: none;

    @include bp.breakpoint(medium, max) {
      display: block;
      position: absolute;
      top: var(--headerH);
      right: 0;
      width: 100%;
      height: auto;
      opacity: 1;

      padding: 1rem 0;
      color: var(--text1);
      background-color: var(--surface1-translucent);

      transition: clip-path 300ms ease;
      clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);

      &[hidden] {
        clip-path: polygon(0% 0%, 100% 0%, 100% 0%, 0% 0%);
      }
    }

    @include bp.breakpoint(medium, min) {
      display: flex;
      justify-content: flex-end;
    }
  }

  & ul li a {
    display: block;
    position: relative;
    color: inherit;
    text-decoration: none;
    text-transform: uppercase;

    &::after {
      position: absolute;
      color: currentColor;
      fill: currentColor;
      content: ' ';
      bottom: 0;
      left: 0;
      width: 100%;
      height: 2px;
      @include h.straightSquiggle();
      background-repeat: no-repeat;
      background-size: cover;
    }

    @include bp.breakpoint(medium, max) {
      padding: 0.5rem 1.5rem;
    }
    @include bp.breakpoint(medium, min) {
      padding: 0.5rem;
    }

    &:hover {
      color: var(--brand);
      transform: translateY(-1px);
    }
  }
}

.toggleNavButton {
  appearance: none;
  cursor: pointer;
  font-size: 25px;
  border: none;
  background: none;
  margin: 0;
  color: inherit;

  & svg {
    display: block;
    fill: inherit;
  }

  @include bp.breakpoint(medium, min) {
    display: none;
  }
}

@keyframes slideFromTop {
  from {
    transform: translateY(-50px) scale(1.005);
    opacity: 0;
  }

  to {
    transform: translateY(0px) scale(1);
    opacity: 1;
  }
}

@keyframes growFromTop {
  from {
    opacity: 1;
    clip-path: polygon(0% 0%, 100% 0%, 100% 0%, 0% 0%);
  }

  to {
    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
  }
}

